Adding clustering herarchical

--- a/Chapter1.tex
+++ b/Chapter1.tex
@@ -86,7 +86,7 @@ Representing unstructured text within a model that describes textual units and t
 
 During the last decade, graphs have been used to model textual data given its ability to naturally describe the dynamics and structured of text. We propose to represent a linguistic resource in the form of a heterogeneous language network. This model then can be used as a comprehensive data source to address Natural Language Processing tasks. 
 
-The originality of our work consists in taking into account different types of features, e.g., lexical, syntactical, and orthographic information; and unifying them under a single hypergraph structure. An hypergraph differs from a graph in that its edges may link several nodes together at the same time. This flexibility allows for simple and efficient access to the stored elements, either specific types of words or specific features. (revoir: advantages of hyperedges]
+The originality of our work consists in taking into account different types of features, e.g., lexical, syntactical, and orthographic information; and unifying them under a single hypergraph structure. An hypergraph differs from a graph in that its edges may link several nodes together at the same time. This flexibility allows for simple and efficient access to the stored elements, either specific types of words or specific features.
 %
 We use the proposed model as the starting point of our other two contributions: solving Word Sense Disambiguation and Induction and Named Entity Recognition. 
 
@@ -144,7 +144,7 @@ Figure \ref{fig:challenges_contribs} synthesizes the concerned NLP process-flow 
 %Afterwards, we present how these features can be combined to improve the results of single-feature based solutions. 
 %Finally, we detail the machine learning methods we employ in certain as part of our methodology. 
 
-\paragraph{Chapter \ref{chap:ling_net}} We begin by giving a review on how linguistic networks are used in the literature which contextualizes our first and second contributions. We present and define a novel structure to hold language information based on a fusion enriched hypergraph linguistic model.  First, as the first set of characteristics of the model, we discuss its characteristics and the intuitions behind its conception: the choice of the structure, the role of nodes and heterogeneous edges and the type of features stored.  Then, as the second important set of properties of the proposition, we introduce a set of techniques to make use of heterogeneous relations while dealing with sparsity in order to produce an unique enriched representation. Namely, we present the feature fusion techniques. These methods are integral part of our contributions. Finally, we present a concrete application of our hypergraph model, an instantiation of the model based on the English Wikipedia. We describe its properties and motivations. Contents of this chapter are published in \cite{sorianoJournal,sorianoLREC,sorianoEGCChallenge}.
+\paragraph{Chapter \ref{chap:ling_net}} We begin by giving a review on how linguistic networks are used in the literature which contextualizes our first and second contributions. We present and define a novel structure to hold language information based on a fusion enriched hypergraph linguistic model.  Initially, as the first set of characteristics of the model, we discuss its characteristics and the intuitions behind its conception: the choice of the structure, the role of nodes and heterogeneous edges and the type of features stored.  Then, as the second important set of properties of the proposition, we introduce a set of techniques to make use of heterogeneous relations while dealing with sparsity in order to produce an unique enriched representation. Namely, we present the feature fusion techniques. These methods are integral part of our contributions. Finally, we present a concrete application of our hypergraph model, an instantiation of the model based on the English Wikipedia. We describe its properties and motivations. Contents of this chapter are published in \cite{sorianoJournal,sorianoLREC,sorianoEGCChallenge}.
 
 %This chapter describes the process of parsing and storing an English Wikipedia Syntactical Dump. We use open source tools on freely available data to generate a software that is able to extract lexical and syntactic data from a given corpus.We thus create and publicly release a syntactically annotated version of the English Wikipedia containing often-neglected information, stored in a format that facilitates its manipulation. 
 \paragraph{Chapter \ref{chap:wsd}} In this chapter, we present our two applied contributions. First, an algorithm that exploits the structure of the network, i.e., the connections between nodes to solve word sense induction and disambiguation. 
