--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -516,7 +516,7 @@ year= {2016},
 }
 
 @PhdThesis{Daume2006,
-  author    = {Daume,III, Harold Charles},
+  author    = {Daum{\'e} III, Harold Charles},
   title     = {Practical Structured Learning Techniques for Natural Language Processing},
   note      = {AAI3337548},
   advisor   = {Marcu, Daniel},
@@ -999,6 +999,17 @@ publisher = "Wiley-Blackwell",
   language  = {english},
   location  = {Marrakech, Morocco},
 }
+
+@article{daume2012course,
+  title={A course in machine learning},
+  author={Daum{\'e} III, Hal},
+  journal={chapter},
+  volume={5},
+  pages={69},
+  year={2012}
+}
+
+
 
 @InProceedings{Collins2002,
   author    = {Collins, Michael},
